src/main/java/de/dm/intellij/liferay/language/poshi/Poshi.bnf
//Poshi Script documentation: https://github.com/yichenroy/com-liferay-poshi-runner/blob/master/poshi-script.markdown
//Poshi testcases: https://github.com/liferay/liferay-portal/blob/master/modules/test/poshi/poshi-core/src/test/resources/com/liferay/poshi/core/dependencies/elements/PoshiSyntax.testcase
{
   parserClass="de.dm.intellij.liferay.language.poshi.parser.PoshiParser"
   parserUtilClass="de.dm.intellij.liferay.language.poshi.parser.PoshiParserUtil"

   extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

   psiClassPrefix="Poshi"
   psiImplClassSuffix="Impl"
   psiPackage="de.dm.intellij.liferay.language.poshi.psi"
   psiImplPackage="de.dm.intellij.liferay.language.poshi.psi.impl"

   elementTypeHolderClass="de.dm.intellij.liferay.language.poshi.psi.PoshiTypes"
   elementTypeClass="de.dm.intellij.liferay.language.poshi.psi.PoshiElementType"
   tokenTypeClass="de.dm.intellij.liferay.language.poshi.psi.PoshiTokenType"

   psiImplUtilClass="de.dm.intellij.liferay.language.poshi.psi.impl.PoshiPsiImplUtil"

   tokens = [
           //keywords
           DEFINITION = "definition"
           SET_UP = "setUp"
           TEAR_DOWN = "tearDown"
           FUNCTION = "function"
           MACRO = "macro"
           TEST = "test"
           PROPERTY = "property"
           STATIC = "static"
           VAR = "var"
           IF = "if"
           ELSE_IF = "else if"
           ELSE = "else"
           TASK = "task"
           WHILE = "while"
           RETURN = "return"

           CURLY_LBRACE = "{"
           CURLY_RBRACE = "}"
           ROUND_LBRACE = "("
           ROUND_RBRACE = ")"
           SQUARE_LBRACE = "["
           SQUARE_RBRACE = "]"
           PERIOD = "."
           COMMA = ","
           EQUALS = "="
           SEMICOLON = ";"

           LINE_COMMENT = "regexp://.*"
           BLOCK_COMMENT = "regexp:/\*([^*]|\*+[^*/])*(\*+/)?"

           DOUBLE_QUOTED_STRING = "regexp:\"([^\\\"\r\n]|\\[^\r\n])*\"?"

           SINGLE_QUOTED_MULTILINE = "regexp:'''(.|\n)*'''"

           SINGLE_QUOTED_STRING = "regexp:'.*'"

           ANNOTATION_NAME = "regexp:(@[\s]*[a-z0-9-]+)"
           IDENTIFIER = "regexp:([A-z][\w-]*)+"

           ARITHMETIC_OPERATOR = "regexp:(\-|\+|\*/)"
           NUMERIC_CONSTANT = "regexp:[0-9]+"

           COMPARISION_OPERATOR = "regexp:(\!=|==|\!)"

           TESTING_WHITESPACE = "regexp:[ \n\t\r\f]+"
   ]

   implements("function-definition|macro-definition|test-definition|variable-assignment")=[
    "com.intellij.psi.PsiNamedElement"
   ]

   extends(".*-definition") = definition-base
}

// Root

poshi-file ::= definition-block | comments

definition-block ::= [annotation*] DEFINITION [CURLY_LBRACE {structure-block | command-block | property-instruction | variable | comments}* CURLY_RBRACE]

structure-block ::= (SET_UP | TEAR_DOWN) [CURLY_LBRACE {invocation | property-instruction | variable | control-block | comments}* CURLY_RBRACE]

command-block ::= [annotation*] definition-base [CURLY_LBRACE {invocation | property-instruction | variable | control-block | comments | return-statement}* CURLY_RBRACE]

definition-base ::= function-definition | macro-definition | test-definition {
    methods=[getName setName]
}

function-definition ::= FUNCTION IDENTIFIER

macro-definition ::= MACRO IDENTIFIER

test-definition ::= TEST IDENTIFIER

method-call ::= IDENTIFIER {PERIOD IDENTIFIER}* {
    methods=[getReferences]
}

invocation ::= method-call [ROUND_LBRACE [invocation-inner-list] ROUND_RBRACE] [SEMICOLON]

private invocation-inner-list ::= invocation-inner {COMMA invocation-inner}*

private invocation-inner ::= variable-assignment | IDENTIFIER | strings {ARITHMETIC_OPERATOR invocation-inner}*

variable-assignment ::= IDENTIFIER EQUALS variable-assignment-inner {ARITHMETIC_OPERATOR variable-assignment-inner}* {
    methods=[getName setName]
}

private variable-assignment-inner ::= (strings | invocation | NUMERIC_CONSTANT)

return-statement ::= RETURN {strings}* [SEMICOLON]

private strings ::= string-quoted-double | string-quoted-single-multiline | string-quoted-single

string-quoted-double ::= DOUBLE_QUOTED_STRING {
    methods=[getReferences]
}

string-quoted-single-multiline ::= SINGLE_QUOTED_MULTILINE

string-quoted-single ::= SINGLE_QUOTED_STRING

annotation ::= ANNOTATION_NAME [EQUALS string-quoted-double] {
    methods=[getName getValue]
}

property-instruction ::= PROPERTY IDENTIFIER {PERIOD IDENTIFIER}* EQUALS (string-quoted-double) [SEMICOLON]

variable ::= [STATIC] VAR variable-assignment [SEMICOLON]

control-block ::= (control-block-with-condition | control-block-without-condition) CURLY_LBRACE {invocation | property-instruction | variable | control-block | comments}* CURLY_RBRACE

private control-block-with-condition ::= (IF | ELSE_IF | TASK | WHILE) ROUND_LBRACE control-block-inner* ROUND_RBRACE

private control-block-without-condition ::= (ELSE)

private control-block-inner ::= invocation | string-quoted-double | variable-assignment | COMPARISION_OPERATOR | ROUND_LBRACE control-block-inner* ROUND_RBRACE

comments ::= comment-block | LINE_COMMENT

comment-block ::= BLOCK_COMMENT

//TODO: for loops
